test/spec_vectors/table/ok/module_14.wat
(module (table 1 funcref (ref.null func)))