test/spec_vectors/table/fail/module_27.wat
(module (type $t (func)) (table 1 (ref $t) (ref.null func)))